<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".fragment.akun_fragment">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<androidx.cardview.widget.CardView
		android:id="@+id/layoutForm"
		android:layout_marginTop="30dp"
		android:layout_marginBottom="80dp"
		android:layout_width="match_parent"
		android:layout_marginStart="16dp"
		android:layout_marginEnd="16dp"
		android:elevation="10dp"
		android:layout_height="wrap_content">
		<LinearLayout
			android:layout_marginTop="10dp"
			android:layout_marginBottom="20dp"
			android:layout_marginStart="10dp"
			android:layout_marginEnd="10dp"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">

			<EditText
				android:id="@+id/txt_email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="10dp"
				android:autofillHints="@string/akun1"
				android:hint="@string/akun1"
				android:inputType="textEmailAddress"
				android:minHeight="48dp"
				tools:ignore="TextContrastCheck" />

			<EditText
				android:id="@+id/txt_nama"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="10dp"
				android:autofillHints="@string/akun2"
				android:hint="@string/akun2"
				android:inputType="text"
				android:minHeight="48dp"
				tools:ignore="TextContrastCheck" />

			<EditText
				android:id="@+id/txt_telepon"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="10dp"
				android:autofillHints="@string/akun3"
				android:hint="@string/akun3"
				android:inputType="text"
				android:minHeight="48dp"
				tools:ignore="TextContrastCheck" />

			<EditText
				android:id="@+id/txt_alamat"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="10dp"
				android:autofillHints="@string/akun5"
				android:hint="@string/akun5"
				android:inputType="text"
				android:minHeight="48dp"
				tools:ignore="TextContrastCheck" />

			<EditText
				android:id="@+id/txt_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="10dp"
				android:autofillHints="@string/akun6"
				android:hint="@string/akun6"
				android:inputType="textPassword"
				android:minHeight="48dp"
				tools:ignore="TextContrastCheck" />
			<LinearLayout
				android:weightSum="2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<Button
					android:layout_weight="1"
					android:id="@+id/tblUbah"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@color/bgToolbar"
					android:text="@string/akun7"
					style="?android:attr/buttonBarStyle"
					android:textColor="@color/white"/>
				<Button
					android:layout_weight="1"
					android:id="@+id/tblLogout"
					android:layout_marginStart="10dp"
					android:layout_marginEnd="10dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@color/maroon"
					style="?android:attr/buttonBarStyle"
					android:text="@string/akun8"
					android:textColor="@color/white"/>
			</LinearLayout>

		</LinearLayout>
	</androidx.cardview.widget.CardView>

	</RelativeLayout>
</ScrollView>
