<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	app:cardCornerRadius="3dp"
	app:cardElevation="2dp"
	app:cardUseCompatPadding="true"
	android:background="@drawable/rect2">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:padding="8dp">
			<ImageView
				android:id="@+id/imgCart"
				android:layout_width="70dp"
				android:layout_height="70dp"
				android:scaleType="fitXY"
				android:contentDescription="@string/dash12"
				android:layout_gravity="center"
				android:src="@drawable/raket"/>
			<LinearLayout
				android:layout_weight="1"
				android:layout_width="0dp"
				android:layout_height="70dp"
				android:orientation="vertical"
				android:paddingStart="11dp"
				android:paddingEnd="11dp">
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:weightSum="3"
					android:orientation="horizontal">
					<TextView
						android:layout_weight="3"
						android:id="@+id/titleCart"
						android:maxLines="2"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textColor = "?android:textColorPrimary"
						android:text="@string/dash12"/>
					<ImageView
						android:id="@+id/btn_delete"
						android:layout_weight="1"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:contentDescription="@string/app_name"
						android:layout_gravity="end"
						android:src="@drawable/ic_close"/>
				</LinearLayout>


				<LinearLayout
					android:id="@+id/layoutDiscount"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:gravity="center|start"
					android:visibility="invisible">
					<TextView
						android:id="@+id/tvhargaCoret"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textColor = "?android:textColorPrimary"
						android:text="@string/cart11"
						android:textSize="12sp"/>
					<TextView
						android:id="@+id/tvDiscount"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/cart12"
						android:layout_marginStart="10dp"
						android:textColor="@color/maroon"/>
				</LinearLayout>
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:gravity="center">
					<TextView
						android:id="@+id/hargaCart"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:textColor = "?android:textColorPrimary"
						android:layout_weight="1"
						android:text="@string/cart13"/>
					<LinearLayout
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:orientation="horizontal"
						android:padding="1dp">
						<ImageView
							android:id="@+id/minCart"
							android:layout_width="21dp"
							android:layout_height="21dp"
							android:contentDescription="@string/cart10"
							android:src="@drawable/ic_remove"
							android:layout_gravity="center"/>
						<TextView
							android:id="@+id/qtyCart"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/cart14"
							android:gravity="center"
							android:textColor = "?android:textColorPrimary"
							android:layout_marginStart="10dp"
							android:layout_marginEnd="10dp"
							android:layout_gravity="center"/>
						<ImageView
							android:id="@+id/addCart"
							android:layout_width="21dp"
							android:layout_height="21dp"
							android:contentDescription="@string/cart10"
							android:src="@drawable/ic_add"
							android:layout_gravity="center"/>
					</LinearLayout>
				</LinearLayout>
			</LinearLayout>
	</LinearLayout>
</androidx.cardview.widget.CardView>
