<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
	android:orientation="vertical"
    tools:context=".page.Payment">

	<androidx.appcompat.widget.Toolbar
		android:id="@+id/tbtoolbar"
		app:titleTextColor="@color/white"
		android:background="@color/bgToolbar"
		android:minHeight="?attr/actionBarSize"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>

	<androidx.cardview.widget.CardView
		android:id="@+id/cdCatatan"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="10dp"
		android:layout_marginEnd="10dp"
		android:layout_marginTop="10dp"
		app:cardCornerRadius="3dp"
		app:cardElevation="2dp"
		app:cardUseCompatPadding="true">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/bgToolbar"
			android:orientation="vertical">
			<TextView
				android:layout_marginStart="16dp"
				android:layout_marginEnd="16dp"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:text="@string/payment8"
				android:textColor="@color/white"
				android:textSize="20sp"
				android:textStyle="bold"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginEnd="16dp"
			android:layout_marginTop="50dp"
			android:orientation="vertical">

			<TextView
				android:layout_marginTop="10dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="@color/black"
				android:text="@string/payment7"
				android:textSize="14sp"
				android:layout_marginStart="5dp"
				android:layout_gravity="center_vertical"
				app:drawableStartCompat="@drawable/ic_arrow" />

			<TextView
				android:layout_marginTop="10dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="@color/black"
				android:text="@string/payment6"
				android:textSize="14sp"
				app:drawableStartCompat="@drawable/ic_arrow"
				android:layout_marginStart="5dp"
				android:layout_gravity="center_vertical"/>

			<TextView
				android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="@color/black"
				android:text="@string/payment5"
				app:drawableStartCompat="@drawable/ic_arrow"
				android:textSize="14sp"
				android:layout_marginStart="5dp"
				android:layout_gravity="center_vertical"/>


		</LinearLayout>
	</androidx.cardview.widget.CardView>
	<androidx.cardview.widget.CardView
		android:id="@+id/cdpembayaran"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="10dp"
		android:layout_marginEnd="10dp"
		android:layout_marginTop="10dp"
		app:cardCornerRadius="3dp"
		app:cardElevation="2dp"
		app:cardUseCompatPadding="true">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/maroon"
			android:orientation="vertical">
			<TextView
				android:layout_marginStart="16dp"
				android:layout_marginEnd="16dp"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:text="@string/payment9"
				android:textColor="@color/white"
				android:textSize="20sp"
				android:textStyle="bold"/>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginEnd="16dp"
				android:layout_marginTop="10dp"
				android:textStyle="bold"
				android:textColor="@color/white"
				android:text="@string/payment2"
				android:textSize="16sp"
				android:layout_gravity="center_vertical"/>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginEnd="16dp"
				android:layout_marginBottom="20dp"
				android:textStyle="bold"
				android:textColor="@color/white"
				android:text="@string/payment1"
				android:textSize="16sp"
				android:layout_gravity="center_vertical"/>
		</LinearLayout>
	</androidx.cardview.widget.CardView>
	<Button
		android:id="@+id/btn_bayar"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:visibility="invisible"
		android:layout_gravity="center"
		android:text="@string/payment10"
		android:background="@color/maroon"
		android:textColor="@color/white"
		android:layout_marginTop="20dp"/>
</LinearLayout>
