<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:fillViewport="true"
	tools:context=".page.Detailproduk">


	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<com.google.android.material.appbar.AppBarLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
				<androidx.appcompat.widget.Toolbar
					android:id="@+id/toolbar"
					android:layout_width="match_parent"
					android:layout_height="?attr/actionBarSize"
					android:background="@color/bgToolbar"
					app:layout_scrollFlags="scroll|enterAlways"
					app:title="VndroSport Shop"
					app:titleTextColor="@color/white"/>
			</com.google.android.material.appbar.AppBarLayout>

			<androidx.cardview.widget.CardView
				android:layout_marginTop="10dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:layout_marginEnd="8dp"
				android:layout_marginStart="8dp">

				<ImageView
					android:contentDescription="@string/produk1"
					android:layout_width="match_parent"
					android:layout_height="300dp"
					android:scaleType="fitXY"
					android:src="@drawable/raket"/>

			</androidx.cardview.widget.CardView>

			<androidx.cardview.widget.CardView
			android:layout_marginTop="10dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				android:animateLayoutChanges="true"
				android:background="@color/detail1"
				android:orientation="horizontal">
					<ImageView
						android:contentDescription="@string/produk1"
						android:layout_margin="5dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:src="@drawable/shops2"/>
					<LinearLayout
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:orientation="vertical">
						<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_marginTop="8dp"
							android:layout_marginStart="8dp"
							android:layout_marginEnd="8dp"
							android:textSize="16sp"
							android:text="@string/produk2"
							android:textStyle="bold" />
						<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:textSize="12sp"
							android:layout_marginStart="8dp"
							android:layout_marginEnd="8dp"
							android:text="@string/produk3"/>
				</LinearLayout>

			</LinearLayout>
		</androidx.cardview.widget.CardView>

		<androidx.cardview.widget.CardView
			android:layout_marginTop="10dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				android:animateLayoutChanges="true"
				android:background="@color/detail1"
				android:orientation="vertical">
				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/produk4"
					android:textSize="18sp"
					android:textStyle="bold"
					android:layout_marginStart="8dp"
					android:layout_marginEnd="8dp"
					android:layout_marginTop="8dp"/>
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal">
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/produk5"
						android:textSize="14sp"
						android:layout_marginStart="8dp"
						android:layout_marginEnd="8dp"
						android:layout_marginTop="8dp"/>
					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="end"
						android:text="@string/produk6"
						android:textSize="14sp"
						android:layout_marginStart="8dp"
						android:layout_marginEnd="8dp"
						android:layout_marginTop="8dp"/>
				</LinearLayout>
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="8dp"
					android:orientation="horizontal">
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/produk7"
						android:textSize="14sp"
						android:layout_marginStart="8dp"
						android:layout_marginEnd="8dp"
						android:layout_marginTop="8dp"/>
					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:gravity="end"
						android:text="@string/produk8"
						android:textSize="14sp"
						android:layout_marginStart="8dp"
						android:layout_marginEnd="8dp"
						android:layout_marginTop="8dp"/>
				</LinearLayout>
			</LinearLayout>
		</androidx.cardview.widget.CardView>

		<androidx.cardview.widget.CardView
			android:layout_marginTop="10dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				android:animateLayoutChanges="true"
				android:background="@color/detail1"
				android:orientation="vertical">
				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
					<TextView
						android:id="@+id/descriptionTitle"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_alignParentStart="true"
						android:padding="8dp"
						android:text="@string/produk9"
						android:textStyle="bold" />
				</RelativeLayout>
				<View
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:background="@color/detail2" />
				<TextView
					android:id="@+id/description"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="@string/lorem_ipsum2" />
			</LinearLayout>
		</androidx.cardview.widget.CardView>

	</LinearLayout>
</ScrollView>
